--- a/Contact me.html
+++ b/Contact me.html
@@ -14,7 +14,7 @@
       <li><a href="https://www.facebook.com">Fb</a></li>
     </ul>
     <form
-      action="mailto:aotmick01@gmail.com"
+      action="mailto:ariyan@gmail.com"
       method="post"
       enctype="text/plain"
     >
