--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <tr>
         <td><img src="coder.jpeg" alt="Image" height="70%" width="70%" /></td>
         <td>
-          <h1>Aotmick</h1>
+          <h1>Ariyan</h1>
           <p>
             <strong
               >Software Engineer and coder at
